Implementado Route, Controladores y Servicios
Se ha arreglado temas de dominio
Se han agregado convertidores y constructores
Se han corregido los servidores de route y controlpoint
Se han añadido unas vistas de PRUEBA
TODO: Falta el tema de los daysrepeat

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.0.0.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+   			 <groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20180813</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -311,6 +317,12 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.4</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.decimal4j</groupId>
+    		<artifactId>decimal4j</artifactId>
+    		<version>1.0.3</version>
 		</dependency>
 
 	</dependencies>
