--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,8 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <welcome-file-list>
-    <welcome-file>/views/misc/index.jsp</welcome-file>
+    <!--<welcome-file>/views/misc/index.jsp</welcome-file>  -->
+    <welcome-file>/views/security/login.jsp</welcome-file>
   </welcome-file-list>
   <error-page>
     <error-code>403</error-code>
