--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
 	<!-- Dependencies -->
 
 	<dependencies>
+	<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>4.2.0</version>
+		</dependency>
 
 		<!-- Spring Framework -->
 
