--- a/pom.xml
+++ b/pom.xml
@@ -123,10 +123,29 @@
 	<!-- Dependencies -->
 
 	<dependencies>
-	<dependency>
-			<groupId>com.stripe</groupId>
-			<artifactId>stripe-java</artifactId>
-			<version>4.2.0</version>
+	
+		<dependency>
+  			<groupId>com.paypal.sdk</groupId>
+  			<artifactId>paypal-core</artifactId>
+  			<version>1.7.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>checkout-sdk</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.6</version>
+		</dependency>
+		
+		<dependency>
+  			<groupId>com.braintreepayments</groupId>
+  			<artifactId>braintreehttp</artifactId>
+  			<version>1.3.1</version>
 		</dependency>
 
 		<!-- Spring Framework -->
